--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
     hooks:
       - id: flake8
         language_version: python3.11
+        args: [--max-line-length=120]
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.5.0
